--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Janice Book</title>
+    <title>Janice</title>
     <style>
         body {
             font-family: "Source Sans Pro", sans-serif;
@@ -41,7 +41,7 @@
                 <div class="col-md-12 text-center">
                     <div class="ads-col text-center">
                         <a onclick="playAudio()" href="https://wa.link/6u385y" target="__blank">
-                            <img src="janice_website.gif" class="img-fluid visit" alt="">
+                            <img src="janice_banner.gif" class="img-fluid visit" alt="">
                         </a>
                     </div>
                 </div>
